--- a/src/main/resources/templates/addressBook.html
+++ b/src/main/resources/templates/addressBook.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Buddy List</title>
+    <title>Address Book</title>
 </head>
 <body>
-<h1>Buddy List</h1>
+<h1>Address Book</h1>
 <p>Owner: <span th:text="${addressBook.owner}"></span></p>
+<h2>Buddy List:</h2>
 <ul>
-    <li th:each="buddyInfo : ${addressBook.buddyList}">
-        <span th:text="${buddyInfo.name}"></span> - <span th:text="${buddyInfo.phoneNumber}"></span>
+    <li th:each="buddy : ${addressBook.buddyList}">
+        <span th:text="${buddy.name}"></span> - <span th:text="${buddy.phoneNumber}"></span>
     </li>
 </ul>
 </body>
