--- a/src/main/resources/templates/createAddressBook.html
+++ b/src/main/resources/templates/createAddressBook.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Create AddressBook</title>
+    <title>Create Address Book</title>
 </head>
 <body>
-<h1>Create AddressBook</h1>
-<form action="/api/addressbooks" method="post">
-    <label for="owner">Owner:</label>
-    <input type="text" id="owner" name="owner" required>
-    <br>
-    <button type="submit">Create AddressBook</button>
+<h1>Create Address Book</h1>
+<form action="/createAddressBook" method="post">
+    Owner: <input type="text" name="owner" required><br>
+    <button type="submit">Create Address Book</button>
 </form>
 </body>
 </html>
